@@ -8,6 +8,9 @@ Copyright (C) 2008-2020 B2CK SPRL.
 Copyright (C) 2010-2019 Nicolas Évrard.
 Copyright (C) 2011-2012 Rodrigo Hübner.
 Copyright (C) 2012-2013 Antoine Smolders.
+Copyright (C) 2020 Maxime Richez
+Copyright (C) 2020 SALUC SA
+
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
